package.json postuninstall

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "cordova-android"
   ],
   "author": "Tekin@gomes",
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "postuninstall": "ionic cordova platform rm android && ionic cordova platform add androi"
+  }
 }
