package.json postuninstall

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "author": "Tekin@gomes",
   "license": "ISC",
   "scripts": {
-    "postuninstall": "ionic cordova platform rm android && ionic cordova platform add androi"
+    "postuninstall": "ionic cordova platform rm android && ionic cordova platform add android"
   }
 }
