--- a/plugin.xml
+++ b/plugin.xml
@@ -4,15 +4,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <name>TekinWifi</name>
     <js-module name="TekinWifi" src="www/TekinWifi.js">
-        <clobbers target="cordova.plugins.TekinWifi" />
+        <clobbers target="TekinWifi" />
     </js-module>
     <platform name="android">
-        <config-file parent="/*" target="res/xml/config.xml">
+        <config-file parent="/widget" target="res/xml/config.xml">
             <feature name="TekinWifi">
-                <param name="android-package" value="cordova.plugin.tekin-wifi.TekinWifi" />
+                <param name="android-package" value="cordova.plugin.tekin.TekinWifi" />
             </feature>
         </config-file>
-        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        <config-file parent="/manifest" target="AndroidManifest.xml"></config-file>
         <source-file src="src/android/TekinWifi.java" target-dir="src/cordova.plugin.tekin.wifi/TekinWifi" />
     </platform>
 </plugin>
