--- a/plugin.xml
+++ b/plugin.xml
@@ -12,11 +12,11 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="TekinWifi">
-                <param name="android-package" value="cordova.plugin.tekin.TekinWifi" />
+                <param name="android-package" value="com.tekin.tekinwifi.TekinWifi" />
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-        <source-file src="src/android/TekinWifi.java" target-dir="src/cordova/plugin/tekin/TekinWifi" />
+        <source-file src="src/android/TekinWifi.java" target-dir="src/com/tekin/tekinwifi/TekinWifi" />
     </platform>
 
 </plugin>
