--- a/plugin.xml
+++ b/plugin.xml
@@ -1,22 +1,39 @@
-<?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-tekin-wifi" version="0.0.1" 
-    xmlns="http://apache.org/cordova/ns/plugins/1.0" 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="UTF-8"?>
+<plugin id="cordova-aspolar-plugin-signal-strength" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <name>TekinWifi</name>
+    <name>Tekin Wifi</name>
+    <description>An Android Cordova plugin to manage wifi</description>
+    <license>MIT</license>
+    <keywords>cordova,android,wifi,manager</keywords>
+    <repo>https://github.com/TekinGomes37/tekin_wifi_manager</repo>
+    <issue>https://github.com/TekinGomes37/tekin_wifi_manager/issues</issue>
+
+    <engines>
+        <engine name="cordova" version=">=3.0.0"/>
+    </engines>
+    
+    <asset src="www/TekinWifi.js" target="js/TekinWifi.js"/>
 
     <js-module name="TekinWifi" src="www/TekinWifi.js">
-        <clobbers target="TekinWifi" />
+        <clobbers target="TekinWifi"/>
     </js-module>
 
+    <!-- android -->
     <platform name="android">
+
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="TekinWifi">
-                <param name="android-package" value="com.tekin.tekinwifi.TekinWifi" />
+                <param name="android-package" value="com.tekin.plugin.TekinWifi"/>
+                <!-- <param name="onload" value="true" /> -->
             </feature>
-        </config-file>
-        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-        <source-file src="src/android/TekinWifi.java" target-dir="src/com/tekin/tekinwifi/TekinWifi" />
-    </platform>
 
+        </config-file>
+
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+            <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+            <!-- add permission  -->
+        </config-file>
+
+        <source-file src="src/android/TekinWifi.java" target-dir="src/com/tekin/plugin/TekinWifi"/>
+    </platform>
 </plugin>
