--- a/plugin.xml
+++ b/plugin.xml
@@ -30,7 +30,8 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
-            <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
+            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+            <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
             <!-- add permission  -->
         </config-file>
 
